--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,43 @@
+body {
+	background: url("https://www.gambody.com/blog/wp-content/uploads/2016/08/Star-Wars-3D-Printer-Models.jpg");
+	color: yellow;
+	background-color: #000;
+	background-position: 50% 100px;
+	background-repeat: no-repeat;
+	background-size: 75%;
+}
+
+.sans-serif {
+	font-family: 'Share Tech Mono', monospace;
+}
+
+.wrapper {
+	max-width: 640px;
+	/*align-content: center;*/
+}
+
 .header {
-	font-size: 30px;
+	margin: 30px 30px;
+	font-size: 50px;
+	align-content: center;
 }
 
 #word {
+	margin: 0 30px 0px 30px;
 	font-size: 30px;
+	align-content: center;
 }
 
 #lives {
+	margin: 30px;
 	font-size: 20px;
+	align-content: center;
+}
+
+button {
+	font-size: 20px;
+	background: #444;
+	color: yellow;
+	align-content: center;
+	margin-left: 30px;
 }
