--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,6 +76,11 @@ button {
 	margin-left: 30px;
 }
 
+button:hover {
+	opacity: 0.85;
+	cursor: pointer;
+}
+
 .display-div {
 	margin-top: 30px;
 	padding: 8px;
